--- a/mlagents-config/sac_trainer_config.yaml
+++ b/mlagents-config/sac_trainer_config.yaml
@@ -14,6 +14,7 @@ default:
     train_interval: 1
     num_layers: 2
     time_horizon: 64
+    save_replay_buffer: True
     sequence_length: 64
     summary_freq: 2000
     tau: 0.005
@@ -32,9 +33,9 @@ Drone:
     init_entcoef: 0.5
     buffer_init_steps: 1000
     buffer_size: 50000
-    max_steps: 5.0e6
+    max_steps: 10.0e6
     tau: 0.01
-    summary_freq: 2000
+    summary_freq: 4000
     time_horizon: 38
     reward_signals:
         extrinsic:
